# general_class_balancer

./: README.md  general_class_balancer.py  pyproject.toml  random_example_test.py
.github/workflows/: documentation.yml  gh-pages.yml  publish-to-pypi.yml
src/general_class_balancer/: __init__.py  general_class_balancer.py
tests/: random_example_test.py  unit_tests.py
